# rsmtool

./: .coveragerc  .gitignore  .gitlab-ci.yml  .isort.cfg  .log.test  .pep8speaks.yml  .pre-commit-config.yaml  .readthedocs.yml  .ruff.toml  .travis.yml  DistributeTests.ps1  LICENSE  MANIFEST.in  README.md  README.rst  azure-pipelines.yml  circle.yml  conda_requirements.txt  conda_requirements_windows.txt  dev-requirements.txt  environment.yml  paper.bib  paper.json  paper.md  pyproject.toml  readthedocs.yml  requirements.dev  requirements.txt  requirements_rtd.txt  rtdenv.yml  s  setup.cfg  setup.py  unittest.cfg
ci/: run_tests.sh  setup.sh
doc/: CHANGELOG.md  JOSS_paper.md  Makefile  add_dash_anchors.py  advanced_usage.rst  api.rst  automated_configuration.rst  available_models.md  builtin_models.rst  builtin_models.rst.inc  column_selection_rsmtool.rst  column_selection_rsmtool.rst.inc  conf.py  config_file.md  config_file_compare.md  config_file_eval.md  config_file_predict.md  config_rsmcompare.rst  config_rsmcompare.rst.inc  config_rsmeval.rst  config_rsmeval.rst.inc  config_rsmexplain.rst.inc  config_rsmpredict.rst  config_rsmpredict.rst.inc  config_rsmsumm.rst  config_rsmsummarize.rst  config_rsmsummarize.rst.inc  config_rsmtool.rst  config_rsmtool.rst.inc  config_rsmxval.rst  config_rsmxval.rst.inc  contributing.rst  custom_notebooks.rst  evaluation.rst  faq.rst  feature_file.md  feature_selection_rsmtool.rst  getting_started.rst  index.rst  intermediate_files_rsmeval.rst  (+46 more)
example/: train.csv
examples/: deploy_as_onnx.py
rsmtool/: __init__.py  analysis.py  analyzer.py  comparer.py  comparison.py  configuration_parser.py  container.py  convert_feature_json.py  create_features.py  fairness_utils.py  format_utils.py  input.py  model.py  modeler.py  predict.py  preprocess.py  preprocessor.py  prmse_utils.py  reader.py  report.py  reporter.py  rsmcompare.py  rsmeval.py  rsmexplain.py  rsmpredict.py  rsmsumm.py  rsmsummarize.py  rsmtool.py  rsmxval.py  test_utils.py  transformer.py  utils.py  version.py  (+1 more)
(+4582 files in other folders)
