[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rsmtool"
dynamic = ["version", "dependencies"]
requires-python = ">= 3.10"

authors = [{ name = "Nitin Madnani ", email = "nmadnani@gmail.com" }]
maintainers = [{ name = "Nitin Madnani ", email = "nmadnani@gmail.com" }]

description = "Rater Scoring Modeling Tool"
readme = "README.rst"
license = { file = "LICENSE" }
keywords = ["scoring modeling"]

classifiers = [
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Topic :: Scientific/Engineering",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]


[project.urls]
Documentation = "https://rsmtool.readthedocs.org"
Repository = "http://github.com/EducationalTestingService/rsmtool"

[project.scripts]
rsmtool = "rsmtool.rsmtool:main"
rsmeval = "rsmtool.rsmeval:main"
rsmpredict = "rsmtool.rsmpredict:main"
rsmcompare = "rsmtool.rsmcompare:main"
rsmsummarize = "rsmtool.rsmsummarize:main"
rsmxval = "rsmtool.rsmxval:main"
rsmexplain = "rsmtool.rsmexplain:main"
render_notebook = "rsmtool.reporter:main"
convert_feature_json = "rsmtool.convert_feature_json:main"

[tool.setuptools.dynamic]
version = { attr = "rsmtool.version.__version__" }
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests", "examples"]
namespaces = false

[tool.ruff]
lint.select = ["D", "E", "F", "I"]
lint.ignore = ["D212"]
line-length = 100
target-version = "py311"
fix = true

[tool.black]
include = '\.pyi?$'
line-length = 100
target-version = ['py311']

[tool.mypy]
exclude = '^setup\.py$'
